<resources>
    <string name="app_name">KhanSama</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="todo">TODO</string>
    <string name="noInternetConnection">No internet connection found!</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="send_otp">Send Otp</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="timer">0:30</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to"><![CDATA[Please type the verification code sent to <br> <b> %1$s </b></br> ]]></string>
    <string name="please_type_the_verification_code_sent_to_demo">Please type the verification code</string>
    <string name="entername">Enter Name</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="enter_emailid">Enter Email Id (optional)</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="inventory">Inventory</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_inventory">Add Inventory</string>
    <string name="inventory_detail">Inventory detail</string>
    <string name="details">Details</string>
    <string name="orderDetail">Order details</string>
    <string name="select_inventory">Select Inventory</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="enterinventoryname">Enter Inventory Name</string>
    <string name="select_unit">Select unit</string>
    <string name="tap_here_to_select_unit">Tap here to select unit</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe">Recipe</string>
    <string name="tap_here_to_add_recipe_image">Tap here to add recipe images</string>
    <string name="add_recipe_images">Add Recipe images</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="enterrecipename">Enter recipe name</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter price</string>
    <string name="add_quantity">Add quantity</string>
    <string name="add">Add</string>
    <string name="minimum_quantity">Minimum quantity</string>
    <string name="change_detail">Change detail</string>
    <string name="purchase">Purchase</string>
    <string name="recipe_category">Recipe Category</string>
    <string name="account_setup">Hold on, setting up your account!</string>
    <string name="retry">Retry</string>
    <string name="billno">BillNo</string>
    <string name="enterbillno">Enter Bill no</string>
    <string name="view_details">View details</string>
    <string name="hide_details">Hide details</string>
    <string name="typevendorname"><![CDATA[Vendor name: <font color=#000000> %1$s </font> ]]></string>
    <string name="typebillno"><![CDATA[BillNo: <font color=#000000> %1$s </font> ]]></string>
    <string name="typeenterby"><![CDATA[Enter by: <font color=#000000> %1$s </font> ]]></string>
    <string name="typemobilenumber"><![CDATA[Mobile Number: <font color=#000000> %1$s </font> ]]></string>
    <string name="tap_here_to_choose_inventory">Tap here to choose inventory</string>
    <string name="add_recipe_item">Add item</string>
    <string name="tap_here_to_add_item">Tap here to add recipe item</string>
    <string name="vendor">Vendor</string>
    <string name="allorders">All Orders</string>
    <string name="add_vendor">Add Vendor</string>
    <string name="change_vendor_detail">Change Vendor detail</string>
    <string name="add_category">Add Category</string>
    <string name="vendor_name">Vendor name</string>
    <string name="enter_vendor_name">Enter Vendor name</string>
    <string name="address">Address</string>
    <string name="enter_vendor_shop_address">Enter Vendor\'s Shop address</string>
    <string name="hundredrupees">₹ 1xx</string>
    <string name="typeprice"><![CDATA[₹ %1$s ]]></string>
    <string name="status">Status:</string>
    <string name="recipeinstructions">Recipe Instructions</string>
    <string name="instruction">Instruction</string>
    <string name="enter_instruction">Enter instruction</string>
    <string name="add_instructions">Add instructions</string>
    <string name="tap_here_to_add_recipe_instructions">Tap here to add recipe instructions</string>
    <string name="step_1">Step #1</string>
    <string name="select_vendor">Select Vendor</string>
    <string name="category">Category</string>
    <string name="enter_recipe_category_name">Enter recipe category name</string>
    <string name="tap_above_to_add_category_icon">Tap above to add category icon</string>
    <string name="select_recipe_category">Select recipe category</string>
    <string name="tap_here_to_select_recipe_category">Tap here to select recipe category</string>
    <string name="add_recipe_type">Add recipe type (Veg or Non-Veg)</string>
    <string name="tap_here_to_select_recipe_type">Tap here to select recipe type</string>
    <string name="all">All</string>
    <string name="veg">Veg</string>
    <string name="nonveg">Non-Veg</string>
    <string name="hello_user">Hello, User!</string>
    <string name="what_do_you_want_to_eat">What do you want to eat?</string>
    <string name="category_fast_food">Category: Fast food</string>
    <string name="ingredients">Ingredients</string>
    <string name="view_cart">View Cart</string>
    <string name="item_0_total_0">0 | ₹ 0</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="one">1</string>
    <string name="place_order">Place Order</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_account">Your Account</string>
    <string name="your_orders">Your orders</string>
    <string name="view_account_details"><u>View account details</u></string>
    <string name="your_favourites">Your favourites</string>
    <string name="client_home">Client Home</string>
    <string name="notavailable">Not available</string>
    <string name="order_summary">Order Summary</string>
    <string name="delivery_address">Delivery address</string>
    <string name="change">Change</string>
    <string name="add_new_address">Add new address</string>
    <string name="your_address_book">Your address book</string>
    <string name="select_city">Select city</string>
    <string name="tap_here_to_select_city">Tap here to select city</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="near_by">Near by</string>
    <string name="your_address_book_is_empty">Your address book is empty</string>
    <string name="location">Location</string>
    <string name="item">Item:</string>
    <string name="package_delivery_charges">Package/Delivery charges:</string>
    <string name="zeroamount">₹ 0</string>
    <string name="total">Total:</string>
    <string name="demo_amount">₹ 135</string>
    <string name="your_favourite_list_is_empty">Your favourite list is empty!</string>
    <string name="dash">-</string>
    <string name="add_address">Add address</string>
    <string name="your_order_list_is_empty">Your order list is empty</string>
    <string name="processing">Processing</string>
    <string name="itemBold"><![CDATA[Item: <b>%1$s</b>]]></string>
    <string name="totalBold"><![CDATA[| Total: <b> ₹ %1$s<b>]]></string>
    <string name="cancel_order">Cancel order</string>
    <string name="order_id">Order Id:</string>
    <string name="order_date">Order date:</string>
    <string name="delivery_date">Delivery date:</string>
    <string name="enter_near_by_known_location">Enter near by known location</string>
    <string name="change_order_status">Change order status</string>
    <string name="tap_here_to_change_status">Tap here to change status</string>
    <string name="select_order_status">Select order status</string>
    <string name="view_all">View all</string>
    <string name="limited_inventory">Limited Inventory</string>
    <string name="refresh">Refresh</string>
    <string name="last_sync">Last sync</string>
    <string name="remark">Remark</string>
    <string name="entercancelreason">Enter cancel reason</string>
    <string name="cancel_reason">Cancel reason</string>
    <string name="add_new_admin">Add New Admin</string>
    <string name="admin_name">Admin Name</string>
    <string name="enter_admin_name">Enter Admin Name</string>
    <string name="login_to_continue">Please login to your account to continue...</string>
    <string name="no_search_result_found">No Search Result found!</string>
    <string name="searchRecipe">Search Recipe</string>
    <string name="veg_only">Veg Only</string>
    <string name="not_available">Not available</string>
    <string name="access">Access</string>
    <string name="change_access_rights">Change Access rights</string>
    <string name="all_admin">All Admin</string>
    <string name="order_status_detail">Order status detail</string>
    <string name="search_recipe">Search Recipe</string>
    <string name="share_khansama">Share KhanSama</string>
    <string name="rate_us">Rate Us</string>
    <string name="shareapptext">"KhanSama.\nEnjoy delicious recipe!\nClick here to download: https://play.google.com/store/apps/details?id=com.hksofttronix.khansama"</string>
    <string name="mobile_number_tag">Mobile number:</string>
    <string name="tap_here_to_select_vendor">Tap here to select vendor</string>
    <string name="search">Search</string>
    <string name="selling_price">Selling Price</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="add_purchase_item">Add Purchase Item</string>
    <string name="add_new_inventory">Add New Inventory</string>
    <string name="add_new_vendor">Add New Vendor</string>
    <string name="additional_charges">Additional charges</string>
    <string name="enter_additional_charges">Enter Additional Charges</string>
    <string name="contact_us">Contact Us</string>
    <string name="call_us">Call Us</string>
    <string name="mail_us">Mail Us</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="recipe_charges">Recipe Charges</string>
    <string name="welcome_to_khansama">Welcome to KhanSama</string>
</resources>