<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantitytf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:hint="@string/quantity"
        app:hintTextColor="@color/black"
        app:helperTextEnabled="true"
        app:helperText="@string/enter_quantity"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        android:layout_marginStart="@dimen/margin30"
        android:layout_marginEnd="@dimen/margin30"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:text=""
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pricetf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:hint="@string/price"
        app:hintTextColor="@color/black"
        app:helperTextEnabled="true"
        app:helperText="@string/enter_price"
        app:counterEnabled="true"
        app:counterMaxLength="4"
        android:layout_marginStart="@dimen/margin30"
        android:layout_marginEnd="@dimen/margin30"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="4"
            android:text=""
            />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/unitTypeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/dash"
        android:textSize="@dimen/textSize16"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginStart="@dimen/margin30"
        android:layout_marginEnd="@dimen/margin30"/>
</LinearLayout>