<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/margin300"
        android:layout_height="@dimen/margin300"
        android:layout_marginTop="@dimen/margin16"
        android:layout_gravity="center"
        android:src="@drawable/loginbg"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin16"
            android:layout_marginEnd="@dimen/margin16"
            android:layout_marginTop="@dimen/margin16"
            android:layout_marginBottom="@dimen/margin16"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_to_khansama"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobilenotf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin10"
                android:hint="@string/mobile_number"
                app:hintTextColor="@color/black"
                app:helperTextEnabled="true"
                app:helperText="@string/enter_mobile_number"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:prefixText="+91"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text=""
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendotpbt"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/send_otp"
                android:textStyle="bold"
                android:textColor="@color/black" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>